# health-mdt

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/: __init__.py  auth_deps.py  config.py  main.py  seed.py
api/src/agents/: __init__.py  base.py  context.py  orchestrator.py  registry.py
api/src/bot/: main.py
api/src/db/: __init__.py  models.py  session.py
api/src/integrations/: __init__.py  apple_health.py  documents.py  oura.py  pubmed.py  semantic_scholar.py  withings.py
api/src/notifications/: __init__.py  email.py  push.py
api/src/reports/: __init__.py  pdf_export.py
api/src/routes/: auth.py  chat.py  data.py  documents.py  medications.py  meta.py  public.py  push.py  reports.py  sources.py  tasks.py  telegram.py  withings.py
api/src/scheduler/: jobs.py
deploy/: fly.toml  railway.json
deploy/caddy/: Caddyfile
docs/: ARCHITECTURE.md  apple-reminders.md
scripts/: demo.sh  deploy.sh  dev.sh
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/public/: sw.js
web/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/app/demo/: page.tsx
web/src/app/documents/: page.tsx
web/src/app/login/: page.tsx
web/src/app/medications/: page.tsx
web/src/app/onboarding/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/reports/[id]/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/tasks/: page.tsx
web/src/components/: Card.tsx  Landing.tsx  Navbar.tsx  PrimaryCTA.tsx  SessionIntake.tsx  Sparkline.tsx
web/src/lib/: api.ts
