[project]
name = "health-mdt-api"
version = "0.1.0"
description = "Multi-agent personal health assistant — backend"
requires-python = ">=3.11"
dependencies = [
    # Claude Agent SDK — used when users want to run agents through their
    # Claude Pro/Max subscription (CLAUDE_CODE_OAUTH_TOKEN). It spawns the
    # `claude` CLI as a subprocess; the CLI must be installed separately
    # (see Dockerfile: `npm install -g @anthropic-ai/claude-code`).
    "claude-agent-sdk>=0.0.22",
    # anthropic SDK kept for users on ANTHROPIC_API_KEY (pay-per-use) —
    # direct Messages API calls with prompt caching. Selected at runtime.
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "python-multipart>=0.0.17",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=21.7",
    "lxml>=5.3.0",
    "pypdf>=5.1.0",
    "pillow>=11.0.0",
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "sse-starlette>=2.1.3",
    "weasyprint>=63.0",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "pywebpush>=2.0.0",
    "py-vapid>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
